--- a/m/my/my3/my3cents.com.html
+++ b/m/my/my3/my3cents.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the my3cents.com privacy policy that was archived on 2008-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081218033405id_/http%3A//www.my3cents.com/privacy.cgi) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the my3cents.com privacy policy that was archived on 2009-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090614091120id_/http%3A//www.my3cents.com/privacy.cgi) for the most accurate reproduction.-->
 
 <html><head>
 <title>My3cents.com - Let your voice be heard! Consumer Reviews, Complaints and more...</title>
@@ -13,37 +13,18 @@
 
 <link rel="stylesheet" type="text/css" href="/css/my3cents.css">
 
-<script language="JavaScript" src="/scripts/fxns.js"></script><style>.small { font-size: 8pt; font-family: Verdana,Arial,Helvetica,sans-serif; }</style><style>.smallcats { font-size: 8pt; font-family: Verdana,Arial,Helvetica,sans-serif;}</style>
-<script language="JavaScript" src="/scripts/social2.js"></script>
+<script language="JavaScript" src="/scripts/fxns.js" type="text/javascript"></script><style>.small { font-size: 8pt; font-family: Verdana,Arial,Helvetica,sans-serif; }</style><style>.smallcats { font-size: 8pt; font-family: Verdana,Arial,Helvetica,sans-serif;}</style>
+<script language="JavaScript" src="/scripts/social2.js" type="text/javascript"></script>
+<script src="/scripts/menu.js" type="text/javascript"></script>
 
 </head>
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style="margin:5;" bgcolor="#15386B">
 <center>
-<table width="785" style="margin:0;" cellpadding="12" cellspacing="0" bgcolor="#FFFFFF" border="0">
+
+<table width="900" style="margin:0;" cellpadding="12" cellspacing="0" bgcolor="#FFFFFF" border="0">
 <tbody><tr><td>
 
 <script>inc_top('', '', '', '', '');</script><table width="100%" style="margin:0;" cellpadding="0" cellspacing="0" border="0"><tbody><tr valign="TOP"><td align="LEFT" valign="TOP"><a href="https://web.archive.org/web/20061015205952/http://www.my3cents.com"><img src="/my3cents/images/logo.gif" border="0" alt=""></a></td><td align="right"><table cellpadding="3"><tbody><tr><td align="left">&nbsp;&nbsp;&nbsp;<font class="small"><b>Search our Consumer Reviews:</b></font><!-- SiteSearch Google --><form method="get" action="https://web.archive.org/web/20061015205952/http://www.my3cents.com/gSearch.cgi" target="_top" style="margin:0;"><table border="0" bgcolor="#ffffff"><tbody><tr><td nowrap="nowrap" valign="top" align="left" height="32"></td><td nowrap="nowrap"><input type="hidden" name="domains" value="My3cents.com"><input type="text" name="q" size="31" maxlength="255" value=""><input type="submit" name="sa" value="Google Search"></td></tr><tr><td>&nbsp;</td><td nowrap="nowrap"><table><tbody><tr><td><input type="radio" name="sitesearch" value=""><font size="-1" color="#000000">Web</font></td><td><input type="radio" name="sitesearch" value="My3cents.com" checked="checked"><font size="-1" color="#000000">My3cents.com</font></td></tr></tbody></table><input type="hidden" name="client" value="pub-9756519274360254"><input type="hidden" name="forid" value="1"><input type="hidden" name="ie" value="ISO-8859-1"><input type="hidden" name="oe" value="ISO-8859-1"><input type="hidden" name="safe" value="active"><input type="hidden" name="cof" value="GALT:#04359B;GL:1;DIV:#FFFFFF;VLC:663399;AH:center;BGC:FFFFFF;LBGC:FFFFFF;ALC:04359B;LC:04359B;T:000000;GFNT:04359B;GIMP:04359B;LH:30;LW:100;L:http://www.my3cents.com/my3cents/images/logo.gif;S:http://www.my3cents.com;LP:1;FORID:11"><input type="hidden" name="hl" value="en"></td></tr></tbody></table></form><!-- SiteSearch Google --></td></tr></tbody></table></td></tr></tbody></table><table width="100%" bgcolor="#04359b" cellpadding="0" cellspacing="0" style="margin:0;" border="0"><tbody><tr><td width="31%"><table align="LEFT" cellpadding="1" cellspacing="0" border="0"><tbody><tr><td><font color="WHITE"><font class="small"><b>&nbsp;&nbsp;Search for...</b></font></font></td></tr></tbody></table></td><td><table width="100%" align="RIGHT" cellspacing="0" cellpadding="2" border="0"><tbody><tr><td align="right"><a href="/newsletterSignup.cgi"><img src="/my3cents/images/newsletter.gif" border="0"></a>&nbsp;<a href="/rssFeeds.cgi"><img src="/my3cents/images/rss.gif" border="0"></a>&nbsp;</td></tr></tbody></table></td></tr></tbody></table><table height="22" bgcolor="#04359b" style="margin:0;" cellpadding="0" cellspacing="0" border="0"><tbody><tr height="22"><td nowrap="" height="22" valign="top" style="height:38px;"><form name="search" action="/search.cgi" method="GET" style="margin:0;" onsubmit="return submitSearch()">&nbsp;&nbsp;<input type="text" name="criteria" size="25" value=""> <input type="submit" value="Go"><br>&nbsp;&nbsp;<a href="/localSearch.cgi"><font class="small" color="#ffffff">Local search</font></a><input type="hidden" name="usearch" value="X"></form></td><td height="22" valign="top" nowrap="" bgcolor="#FFFFFF"><img src="/my3cents/images/l3_corner_net.gif" border="0"></td><td nowrap="" bgcolor="#FFFFFF" height="22"><form name="navSelect" style="margin:0;"><table height="22" width="70%" border="0" bordercolor="CCCCCC" cellspacing="3" cellpadding="0" style="margin:0;"><tbody><tr valign="TOP" align="LEFT" height="22"><td height="22"><select name="services" onchange="go_Services(self.document.navSelect.services.selectedIndex);"><option selected="">My Consumer Tools</option><option>- - - - - - - - - - - - - </option><option>Write a Review</option><option>Company Contact Info</option><option>Contact Attorney General</option><option>Legal Help Sites</option><option>Government Agencies</option><option>Contact the BBB</option><option>Contact the NFIC</option><option>Credit Card Fraud Advice</option><option>Help on Debt Collection</option><option>Identity Theft - Get Help</option><option>Handling Telemarketers</option><option>Community Forums</option></select></td><td height="22"><select name="catSearch" onchange="go_Search(self.document.navSelect.catSearch.selectedIndex);"><option selected="">Reviews By Category</option><option>- - - - - - - - - - - - - </option><option>Phone/Cable/Internet</option><option>Stores/Products</option><option>Automotive</option><option>Travel</option><option>Computers</option><option>Food</option><option>Health</option><option>Delivery</option><option>Financial</option><option>Credit Cards</option><option>Miscellaneous</option><option>Job Related</option></select></td><td height="22"><select name="login" onchange="go_Login(self.document.navSelect.login.selectedIndex);"><option selected="">My Account</option><option>- - - - - - - - - - - - - </option><option>Join My3cents!</option><option>Login</option><option>My Profile/Settings</option><option>My Recent Posts</option><option>Logout</option></select></td></tr></tbody></table></form></td></tr></tbody></table><br>
-
-
-
-
-<table width="100%" bgcolor="#F5F5F5" cellpadding="10">
-<tbody><tr>
-<td align="center" valign="center">
-
-<iframe id="iframe" src="/ads/tribal728.htm" width="728" height="90" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
-
-<script type="text/javascript">
-   e9 = new Object();
-   e9.size = "728x90,468x60";
-</script>
-<script type="text/javascript" src="http://tags.expo9.exponential.com/tags/My3centscom/ROS/tags.js"></script>
-
-</iframe>
-
-</td>
-</tr>
-</tbody></table>
 
 
 <script>writeBar('200','#eca61d','<FONT >Privacy Policy</font>', 0,'');</script><table width="100%" bgcolor="#FBA035" border="0" align="center" cellspacing="0" cellpadding="0"><tbody><tr><td valign="top"><table width="100%" bgcolor="#ffffff" border="0" align="center" cellspacing="0" cellpadding="4"><tbody><tr><td class="tblheader" nowrap="" width="20%" bgcolor="#FBA035"><b><font>Privacy Policy</font></b></td><td bgcolor="#FFFFFF" align="CENTER"></td><td bgcolor="#FFFFFF" align="RIGHT"><font color="#FFFFFF">-</font></td></tr><tr bgcolor="#FBA035"></tr></tbody></table></td></tr></tbody></table>
@@ -101,6 +82,15 @@ My3cents.com has security measures in place to protect the loss, misuse and alte
 
 <b>Third-Party Collection and Use of Information</b><br>
 From time to time, My3cents.com partners with third parties to provide certain features to My3cents.com users. A third party's collection and use of personally identifiable information is subject to that third party's privacy and security policy. My3cents.com does not have control or access to the information contained in cookies set by third parties.
+<br><br>
+We also use third party advertisements on My3cents.com to support our site.  Some of these advertisers may use technology such as cookies and web beacons when they advertise on our site, which will also send these advertisers (such as Google through the Google AdSense program) information including your IP address, your ISP , the browser you used to visit our site, and in some cases, whether you have Flash installed.  This is generally used for geotargeting purposes (showing New York real estate ads to someone in New York, for example) or showing certain ads based on specific sites visited (such as showing cooking ads to someone who frequents cooking sites).
+<br><br>
+DoubleClick DART cookies<br>
+We also may use DART cookies for ad serving through Google's DoubleClick, which places a cookie on your computer when you are browsing the web and visit a site using DoubleClick advertising (including some Google AdSense advertisements).  This cookie is used to serve ads specific to you and your interests ("interest based targeting").  The ads served will be targeted based on your previous browsing history (For example, if you have been viewing sites about visiting Las Vegas, you may see Las Vegas hotel advertisements when viewing a non-related site, such as on a site about hockey).  DART uses "non personally identifiable information".  It does NOT track personal information about you, such as your name, email address, physical address, telephone number, social security numbers, bank account numbers or credit card numbers.  You can opt-out of this ad serving on all sites using this advertising by visiting http://www.doubleclick.com/privacy/dart_adserving.aspx  
+<br><br>
+You can chose to disable or selectively turn off our cookies or third-party cookies in your browser settings, or by managing preferences in programs such as Norton Internet Security.  However, this can affect how you are able to interact with our site as well as other websites.  This could include the inability to login to services or programs, such as logging into forums or accounts.
+<br><br>
+Deleting cookies does not mean you are permanently opted out of any advertising program.  Unless you have settings that disallow cookies, the next time you visit a site running the advertisements, a new cookie will be added.
 
 <br><br>
 <b>Conversion Tracking and Use of Information</b><br>
@@ -148,7 +138,7 @@ My3cents.com<br>
 <tbody><tr>
 
 
-<td width="50%" valign="top"><table cellspacing="10"><tbody><tr><td valign="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=736"><!--<img src='http://www.cardoffers.com/images/credit_cards/usbank/worldperks_plat.jpg' border=0>--></a></td><td align="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=736">WorldPerks® Visa® Platinum Card</a><br>Apr: 14.75%<br>Annual: $55</td></tr><tr><td valign="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1954"><!--<img src='http://www.cardoffers.com/images/credit_cards/american_express/delta_reserve.jpg' border=0>--></a></td><td align="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1954">Delta Reserve Credit Card</a><br>Apr: 13.99%<br>Annual: $450*</td></tr><tr><td valign="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1930"><!--<img src='http://www.cardoffers.com/images/credit_cards/capital_one/orbitz_average.jpg' border=0>--></a></td><td align="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1930">Capital One® Orbitz® Visa® Platinum</a><br>Apr: 22.90%<br>Annual: $0</td></tr>
+<td width="50%" valign="top"><table cellspacing="10"><tbody><tr><td valign="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1954"><!--<img src='http://www.cardoffers.com/images/credit_cards/american_express/delta_reserve.jpg' border=0>--></a></td><td align="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1954">Delta Reserve Credit Card</a><br>Apr: 13.24%<br>Annual: $450*</td></tr><tr><td valign="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1035"><!--<img src='http://www.cardoffers.com/images/credit_cards/citibank/premierpass.jpg' border=0>--></a></td><td align="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1035">Citi PremierPass® Elite Level</a><br>Apr: 13.24%<br>Annual: $75</td></tr><tr><td valign="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=2011"><!--<img src='http://www.cardoffers.com/images/credit_cards/citibank/citiforward.jpg' border=0>--></a></td><td align="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=2011">Citi Forward(SM) Card</a><br>Apr: 14.24%<br>Annual: $0</td></tr>
 
 </tbody></table>
 
@@ -186,7 +176,7 @@ My3cents.com<br>
 <br>
 
 <table width="100%" cellpadding="5" cellspacing="0" border="0" bgcolor="#ffffff">
-<tbody><tr><td align="center"><a href="/consumerTools.cgi"><font class="small">Consumer Tools</font></a>  |  <a href="javascript:checkLogin();"><font class="small">My Account</font></a>  |  <a href="javascript:vli('/postOpinionStep1.cgi');"><font class="small">Write a Review</font></a>  |  <a href="/ratingsList.cgi"><font class="small">Compare Company Ratings</font></a>  |  <a href="/companyContactInfoList.cgi"><font class="small">Company Contact Directory</font></a>
+<tbody><tr><td align="center"><a href="/consumerTools.cgi"><font class="small">Consumer Tools</font></a>  |  <a href="javascript:checkLogin();"><font class="small">My Account</font></a>  |  <a href="javascript:vli('/postOpinionStep1.cgi');"><font class="small">Write a Review</font></a>  |  <a href="/ratingsList.cgi"><font class="small">Compare Company Ratings</font></a>  |  <a href="/companyContactInfoList.cgi"><font class="small">Company Contact Directory</font></a>  |  <a href="/localSearch.cgi"><font class="small">Local Reviews</font></a>
 
 </td></tr>
 <tr><td align="center">
@@ -201,9 +191,9 @@ My3cents.com<br>
 
 
 
-<hr width="95%">
+<br><br>
 
-<font class="small">Copyright 2000-2008 My3cents, LLC &nbsp; &nbsp; Browse in another <a href="http://babel.altavista.com/tr?lin=en&amp;lout=fr&amp;translate_me=yes" class="small">language</a>
+<font class="small">Copyright 2000-2009 My3cents, LLC &nbsp; &nbsp; Browse in another <a href="http://babel.altavista.com/tr?lin=en&amp;lout=fr&amp;translate_me=yes" class="small">language</a>
 </font></center><font class="small">
 
 
