--- a/p/pa/pay/paydaybank.co.uk.html
+++ b/p/pa/pay/paydaybank.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the paydaybank.co.uk privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216165636id_/http%3A//www.paydaybank.co.uk/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the paydaybank.co.uk privacy policy that was archived on 2009-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090614120057id_/http%3A//www.paydaybank.co.uk/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy Policy | Payday Bank - Same Day Payday Loans</title>
@@ -16,7 +16,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 }
 //-->
 </script>
-</head>
+<script type="text/javascript" charset="iso-8859-1" src="https://server.iad.liveperson.net/hcp/html/mTag.js?site=63125879"></script></head>
 
 <body id="privacyPg">
 <center>
@@ -27,10 +27,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 		<a href="http://www.paydaybank.co.uk/about.aspx">About Us</a> |
 		<a href="http://www.paydaybank.co.uk/">Home</a>
 	  <div id="login">
-			<label>User Name:</label><input name="UserName" id="UserName" type="text">
-			<!--a href="forgot.aspx">Forgot?</a-->
-			<label>Password:</label><input name="Password" id="Password" type="password">
-			<input name="Login" type="image" class="LoginButton" onclick="javascript:window.location='http://www.paydaybank.co.uk/apply.aspx';" value="Login" src="/Images/loginBt.gif" alt="">
+	  <form method="post" id="frmLogin" action="https://www.paydaybank.co.uk//verifylogin.aspx"><label>User Name:</label><input name="UserName" id="UserName" type="text"><label>Password:</label><input name="Password" id="Password" type="password"><input name="Login" type="image" class="LoginButton" value="Login" src="https://www.paydaybank.co.uk/Images/loginBt.gif" alt="Login"></form>
 	  </div>
 	</div>
 </div><ul id="menu">
@@ -41,7 +38,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 <li class="tab4"><a href="http://www.paydaybank.co.uk/contact.aspx">Support</a></li>
 <li class="tab5"><a href="http://www.paydaybank.co.uk/fees.aspx">Charges</a></li>
 <!--<li class="tab5"><a href="https://www.paydaybank.co.uk/apply.aspx">Apply Today</a></li>-->
-<!--li class="tab6"><a href='https://server.iad.liveperson.net/hc/45801743/?cmd=file&file=visitorWantsToChat&site=45801743&byhref=1&imageUrl=https://images.liveperson.com/lp/45801743' target='chat45801743'  onClick="lpButtonCTTUrl = 'https://server.iad.liveperson.net/hc/45801743/?cmd=file&file=visitorWantsToChat&site=45801743&imageUrl=https://images.liveperson.com/lp/45801743&referrer='+escape(document.location); lpButtonCTTUrl = (typeof(lpAppendVisitorCookies) != 'undefined' ? lpAppendVisitorCookies(lpButtonCTTUrl) : lpButtonCTTUrl); window.open(lpButtonCTTUrl,'chat45801743','width=475,height=400,resizable=yes');return false;">Live Help</a></li-->
+<!--li class="tab6"><a id="_lpChatBtn" href='http://server.iad.liveperson.net/hc/63125879/?cmd=file&file=visitorWantsToChat&site=63125879&byhref=1&SESSIONVAR!operator=avner&imageUrl=http://server.iad.liveperson.net/hcp/Gallery/ChatButton-Gallery/English/General/1a' target='chat63125879'  onClick="lpButtonCTTUrl = 'http://server.iad.liveperson.net/hc/63125879/?cmd=file&file=visitorWantsToChat&site=63125879&SESSIONVAR!operator=avner&imageUrl=http://server.iad.liveperson.net/hcp/Gallery/ChatButton-Gallery/English/General/1a&referrer='+escape(document.location); lpButtonCTTUrl = (typeof(lpAppendVisitorCookies) != 'undefined' ? lpAppendVisitorCookies(lpButtonCTTUrl) : lpButtonCTTUrl); window.open(lpButtonCTTUrl,'chat63125879','width=475,height=400,resizable=yes');return false;" >Live Help</a></li-->
 </ul>
 
 
@@ -114,45 +111,68 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 
 
 <div id="sideContent">
-	<ul>
+<!-- BEGIN LivePerson Button Code --><div>
+<!--a id="_lpChatBtn" href='http://server.iad.liveperson.net/hc/63125879/?cmd=file&file=visitorWantsToChat&site=63125879&byhref=1&imageUrl=http://www.paydaybank.co.uk/images' target='chat63125879'  onClick="lpButtonCTTUrl = 'http://server.iad.liveperson.net/hc/63125879/?cmd=file&file=visitorWantsToChat&site=63125879&imageUrl=http://www.paydaybank.co.uk/images&referrer='+escape(document.location); lpButtonCTTUrl = (typeof(lpAppendVisitorCookies) != 'undefined' ? lpAppendVisitorCookies(lpButtonCTTUrl) : lpButtonCTTUrl); window.open(lpButtonCTTUrl,'chat63125879','width=475,height=400,resizable=yes');return false;" ><img src='http://server.iad.liveperson.net/hc/63125879/?cmd=repstate&site=63125879&channel=web&&ver=1&imageUrl=http://www.paydaybank.co.uk/images' name='hcIcon' border=0></a-->
+</div>
+
+
+<p>
+
+	</p><ul>
 		<li>Instant Online Application</li>
-		<li>No faxing of documents required</li>
+		<li>Quick Approvals</li>
 		<li>Same Day Deposit</li>
 	</ul>
+<p></p>
 	<p class="applyBox"><a href="https://www.paydaybank.co.uk/apply.aspx"><img src="Images/applyToday.gif" alt="" border="0"></a></p>
 	<!--<p class="adBox">New! <a href="http://www.phonelounge.co.uk/index.aspx?p=avpl" target="_blank">Latest Handsets on Credit<img src="Images/PL_120x90_banner.gif" alt="" /></a></p>-->
 	<p><img src="Images/cards.gif" alt=""></p>
 	<hr>
+	
+
 </div><div id="footer">
-<a href="http://www.paydaybank.co.uk/">Payday Loan</a> |
-<a href="http://www.paydaybank.co.uk/faq.aspx">FAQ</a> |
+<a href="http://www.paydaybank.co.uk/">Payday Loans</a> |
+<a href="http://www.paydaybank.co.uk/faq.aspx">FAQ </a> |
 <a href="http://www.paydaybank.co.uk/glossary.aspx">Glossary</a> |
 <a href="http://www.paydaybank.co.uk/privacy.aspx">Privacy</a> |
 <a href="http://www.paydaybank.co.uk/articles.aspx">Articles</a> |
 <a href="http://www.paydaybank.co.uk/disclaimer.aspx">Disclaimer</a> |
 <a href="http://www.paydaybank.co.uk/about.aspx">About Us</a> |
-<a href="http://www.paydaybank.co.uk/blog/">Blog</a> |
+<a href="http://www.paydaybank.co.uk/blog/">Payday Loans Blog</a> |
 <a href="http://www.paydaybank.co.uk/links.aspx">Links</a> |
 <a href="http://www.paydaybank.co.uk/sitemap.aspx">Site Map</a>
-
-<br><br>
-
-<a href="http://www.paydaybank.co.uk/Same_day_cash.aspx">Same Day Cash</a> |
-<a href="http://www.paydaybank.co.uk/Same_Day_Loans.aspx">Same Day Loans</a> |
+<br>
 <a href="http://www.paydaybank.co.uk/Online_Payday_Loans.aspx">Online Payday Loans</a> |
-<a href="http://www.paydaybank.co.uk/Pay_Day_Loans.aspx">Pay Day Loans</a> |
 <a href="http://www.paydaybank.co.uk/Cash_Loans.aspx">Cash Loans</a> |
-<a href="http://www.paydaybank.co.uk/Cash_Till_Payday.aspx">Cash Till Payday</a> <br>
+<a href="http://www.paydaybank.co.uk/Pay_Day_Loans.aspx">Pay Day Loans</a> |
+<a href="http://www.freeindex.co.uk/categories/financial_and_accounting/consumer_finance/loans_and_financing/" target="_blank">Payday Loans dir.</a> |
 <a href="http://www.paydaybank.co.uk/Loans_Till_Payday.aspx">Loans Till Payday</a> |
-<a href="http://www.paydaybank.co.uk/Payday_Loans.aspx">Payday Loans</a> |
-<a href="http://www.paydaybank.co.uk/Payday_Advance.aspx">Payday Advance</a> |
-<a href="http://www.paydaybank.co.uk/fast_cash_advance_loans.aspx">Fast Cash Loans</a> |
-<a href="http://www.paydaybank.co.uk/payday_loan_reviews.aspx">Payday Loan Reviews</a>
+<a href="http://www.paydaybank.co.uk/Payday_Loans.aspx">Payday Loan </a>
+<a href="http://www.paydaybank.co.uk/payday_loan_reviews.aspx">Reviews</a>
+
+<br>
+<br>
+
+PaydayBank is a trading name of PDB UK Limited. Churchill House, 137 Brent Street, London, NW4 4DJ.<br>
+<font color="white">Company Reg No. 6617413.   Consumer Credit License 626678/1.  Data Protection Reg #Z1696368</font><br>
 
 <br>
 
-<p>Milarco Ltd, Communications House, 26 York Street, London W1U 6PZ. Data Protection Act 1998 #Z116557X<br>
-© 2005-2007 PaydayBank - All Rights Reserved.</p>
+© 2005-2009 PaydayBank - All Rights Reserved.
+
+<!-- BEGIN LivePerson Monitor. --><script language="javascript"> var lpMTagConfig = {'lpServer' : "server.iad.liveperson.net",'lpNumber' : "63125879",'lpProtocol' : "https"}; function lpAddMonitorTag(src){if(typeof(src)=='undefined'||typeof(src)=='object'){src=lpMTagConfig.lpMTagSrc?lpMTagConfig.lpMTagSrc:'/hcp/html/mTag.js';}if(src.indexOf('https')!=0){src=lpMTagConfig.lpProtocol+"://"+lpMTagConfig.lpServer+src+'?site='+lpMTagConfig.lpNumber;}else{if(src.indexOf('site=')<0){if(src.indexOf('?')<0)src=src+'?';else src=src+'&';src=src+'site='+lpMTagConfig.lpNumber;}};var s=document.createElement('script');s.setAttribute('type','text/javascript');s.setAttribute('charset','iso-8859-1');s.setAttribute('src',src);document.getElementsByTagName('head').item(0).appendChild(s);} if (window.attachEvent) window.attachEvent('onload',lpAddMonitorTag); else window.addEventListener("load",lpAddMonitorTag,false);</script><!-- END LivePerson Monitor. -->
+
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-6009431-2");
+pageTracker._setAllowLinker(true);
+pageTracker._setDomainName("none");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 
 </div>
 </div>
