--- a/a/ad/adu/adultwhoswho.com.html
+++ b/a/ad/adu/adultwhoswho.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the adultwhoswho.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216034623id_/http%3A//www.adultwhoswho.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the adultwhoswho.com privacy policy that was archived on 2009-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090614121650id_/http%3A//www.adultwhoswho.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>Adult Who's Who  - Privacy</title>
@@ -34,22 +34,25 @@
 	</div>
 		<div id="leaderboard">
 		<!-- LEADERBOARD ZONE -->
-		<script language="JavaScript" type="text/javascript">
-		<!--
-		if (!document.phpAds_used) document.phpAds_used = ',';
-		phpAds_random = new String (Math.random()); phpAds_random = phpAds_random.substring(2,11);
-		document.write ("<" + "script language='JavaScript' type='text/javascript' src='");
-		document.write ("http://www.mrskin.com/adserver/adjs.php?n=" + phpAds_random);
-		document.write ("&amp;what=zone:61&amp;target=_new");
-		document.write ("&amp;exclude=" + document.phpAds_used);
-		if (document.referrer)
-		document.write ("&amp;referer=" + escape(document.referrer));
-		document.write ("'><" + "/script>");
-		//-->
-		</script><script language="JavaScript" type="text/javascript" src="http://www.mrskin.com/adserver/adjs.php?n=479205609&amp;what=zone:61&amp;target=_new&amp;exclude=,"></script>
-		<noscript>
-			<a href='http://www.mrskin.com/adserver/adclick.php?n=a223bb9c' target='_new'><img src='http://www.mrskin.com/adserver/adview.php?what=zone:61&amp;n=a223bb9c' border='0' alt='' /></a>
-		</noscript>
+
+		<script type="text/javascript"><!--//<![CDATA[
+		   var m3_u = (location.protocol=='https:'?'https://ads.gamelink.com/ads/www/delivery/ajs.php':'http://ads.gamelink.com/ads/www/delivery/ajs.php');
+		      var m3_r = Math.floor(Math.random()*99999999999);
+		         if (!document.MAX_used) document.MAX_used = ',';
+			    document.write ("<scr"+"ipt type='text/javascript' src='"+m3_u);
+			       document.write ("?zoneid=412");
+			          document.write ('&amp;cb=' + m3_r);
+				     if (document.MAX_used != ',') document.write ("&amp;exclude=" + document.MAX_used);
+				        document.write (document.charset ? '&amp;charset='+document.charset : (document.characterSet ? '&amp;charset='+document.characterSet : ''));
+					   document.write ("&amp;loc=" + escape(window.location));
+					      if (document.referrer) document.write ("&amp;referer=" + escape(document.referrer));
+					         if (document.context) document.write ("&context=" + escape(document.context));
+						    if (document.mmm_fo) document.write ("&amp;mmm_fo=1");
+						       document.write ("'><\/scr"+"ipt>");
+						       //]]>--></script><script type="text/javascript" src="https://ads.gamelink.com/ads/www/delivery/ajs.php?zoneid=412&amp;cb=93685195738&amp;charset=UTF-8&amp;loc=https%3A//web.archive.org/web/20090614121650id_/http%253A//www.adultwhoswho.com/privacy.html"></script><noscript><a href='http://ads.gamelink.com/ads/www/delivery/ck.php?n=a207e7fd&amp;cb=INSERT_RANDOM_NUMBER_HERE' target='_blank'><img src='http://ads.gamelink.com/ads/www/delivery/avw.php?zoneid=412&amp;cb=INSERT_RANDOM_NUMBER_HERE&amp;n=a207e7fd' border='0' alt='' /></a></noscript>
+
+
+
 
 		<!-- END LEADERBOARD -->
 	</div>
@@ -114,36 +117,40 @@
                         <div id="rightcol">
                                 <div id="skyscraper">
                                 <!-- SKYSCRAPER -->
-                                <script language="JavaScript" type="text/javascript">
-                                <!--
-                                if (!document.phpAds_used) document.phpAds_used = ',';
-                                phpAds_random = new String (Math.random()); phpAds_random = phpAds_random.substring(2,11);
-                                document.write ("<" + "script language='JavaScript' type='text/javascript' src='");
-                                document.write ("http://www.mrskin.com/adserver/adjs.php?n=" + phpAds_random);
-                                document.write ("&amp;what=zone:60&amp;target=_new");
-                                document.write ("&amp;exclude=" + document.phpAds_used);
-                                if (document.referrer)
-                                        document.write ("&amp;referer=" + escape(document.referrer));
-                                        document.write ("'><" + "/script>");
-                                //-->
-                                </script><script language="JavaScript" type="text/javascript" src="http://www.mrskin.com/adserver/adjs.php?n=955042064&amp;what=zone:60&amp;target=_new&amp;exclude=,"></script>
-                                <noscript><a href='http://www.mrskin.com/adserver/adclick.php?n=ac98b2f0' target='_new'><img src='http://www.mrskin.com/adserver/adview.php?what=zone:60&amp;n=ac98b2f0' border='0' alt='' /></a>
-                                </noscript>
+
+
+				<script type="text/javascript"><!--//<![CDATA[
+				   var m3_u = (location.protocol=='https:'?'https://ads.gamelink.com/ads/www/delivery/ajs.php':'http://ads.gamelink.com/ads/www/delivery/ajs.php');
+				      var m3_r = Math.floor(Math.random()*99999999999);
+				         if (!document.MAX_used) document.MAX_used = ',';
+					    document.write ("<scr"+"ipt type='text/javascript' src='"+m3_u);
+					       document.write ("?zoneid=49");
+					          document.write ('&amp;cb=' + m3_r);
+						     if (document.MAX_used != ',') document.write ("&amp;exclude=" + document.MAX_used);
+						        document.write (document.charset ? '&amp;charset='+document.charset : (document.characterSet ? '&amp;charset='+document.characterSet : ''));
+							   document.write ("&amp;loc=" + escape(window.location));
+							      if (document.referrer) document.write ("&amp;referer=" + escape(document.referrer));
+							         if (document.context) document.write ("&context=" + escape(document.context));
+								    if (document.mmm_fo) document.write ("&amp;mmm_fo=1");
+								       document.write ("'><\/scr"+"ipt>");
+								       //]]>--></script><script type="text/javascript" src="https://ads.gamelink.com/ads/www/delivery/ajs.php?zoneid=49&amp;cb=37471023012&amp;charset=UTF-8&amp;loc=https%3A//web.archive.org/web/20090614121650id_/http%253A//www.adultwhoswho.com/privacy.html"></script><noscript><a href='http://ads.gamelink.com/ads/www/delivery/ck.php?n=a9ab53f9&amp;cb=INSERT_RANDOM_NUMBER_HERE' target='_blank'><img src='http://ads.gamelink.com/ads/www/delivery/avw.php?zoneid=49&amp;cb=INSERT_RANDOM_NUMBER_HERE&amp;n=a9ab53f9' border='0' alt='' /></a></noscript>
+
+
 
                                 <!-- END SKYSCRAPER -->
                                 </div>
 																<div class="random_container">
 									<div class="random_inner">
 										<div class="random_title">Random Gallery Image</div>
-										<a href="/gallery/view_image.html?folder_id=00083&amp;subfolder_id=00157&amp;id=19524">
-											<img src="/data/adultwhoswho_gallery/00083/00157/thumb/00083_00157_00001_1168819624_58.jpg">
+										<a href="/gallery/view_image.html?folder_id=00200&amp;subfolder_id=00352&amp;id=31851">
+											<img src="/data/adultwhoswho_gallery/00200/00352/thumb/00200_00352_03692_1187106604_96.jpg">
 										</a>
 									</div>
 								</div>
 								                        </div>
                 </div>
         </div>
-        <div id="footer"> Copyright © 2008 AdultWhosWho.com. All rights reserved. Read our <a href="/privacy.html">Privacy Policy</a>. Need help? <a href="/contact.html">Contact Us!</a></div>
+        <div id="footer"> Copyright © 2009 AdultWhosWho.com. All rights reserved. Read our <a href="/privacy.html">Privacy Policy</a>. Need help? <a href="/contact.html">Contact Us!</a></div>
 </div>
 <script type="text/javascript">
 <!--
@@ -151,10 +158,11 @@ var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "htt
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-3857294-1");
+var pageTracker = _gat._getTracker("UA-8706309-1");
 pageTracker._initData();
 pageTracker._trackPageview();
 -->
 </script>
+
 
 </body></html>
