--- a/3/30/30m/30minutebacklinks.com.html
+++ b/3/30/30m/30minutebacklinks.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 30minutebacklinks.com privacy policy that was archived on 2008-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081205175439id_/http%3A//www.30minutebacklinks.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 30minutebacklinks.com privacy policy that was archived on 2009-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090614152522id_/http%3A//www.30minutebacklinks.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head profile="http://gmpg.org/xfn/11">
 <meta http-equiv="Content-Type" content="">
@@ -207,12 +207,6 @@ var pageTracker = _gat._getTracker("UA-735829-65");
 pageTracker._initData();
 pageTracker._trackPageview();
 </script>
-<!--HitTail Code-->
-<script src="http://72779.hittail.com/mlt.js" type="text/javascript"></script>
-<!--End HitTail Code-->
-<script type="text/javascript">
-var woopra_id = '2408568391';
-</script>
-<script src="http://static.woopra.com/js/woopra.js"></script>
+<script type="text/javascript" src="http://analytics.aweber.com/js/awt_analytics.js?id=4DN4"></script>
 
 </body></html>
