--- a/r/re/ren/rentboard.ca.html
+++ b/r/re/ren/rentboard.ca.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rentboard.ca privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217050848id_/http%3A//www.rentboard.ca/company/privacy_policy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rentboard.ca privacy policy that was archived on 2009-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090614182542id_/http%3A//www.rentboard.ca/company/privacy_policy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -46,7 +46,6 @@
 &nbsp;<img src="/images/arrow_red1.gif" alt="*" height="10" width="6">&nbsp;
 <span class="nav_links_1"><a href="/index.aspx">Home</a> &gt; Privacy Policy</span>
 </td></tr></tbody></table>
-<div align="center"><img src="/images/christmas_lights_1.gif" alt="Merry Christmas from the Rent Board of Canada" border="0" height="13" width="564"></div>
 <blockquote>
 <table border="0" cellpadding="2" cellspacing="1" width="90%">
 <tbody><tr>
@@ -176,18 +175,19 @@ If you have questions or concerns regarding this statement, please contact us at
 <table width="100%" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td bgcolor="#3366CC"><img src="/images/spacer1.gif" width="1" height="1" alt=""></td></tr></tbody></table>
 <table width="100%" border="0" cellpadding="2" cellspacing="0" class="nav_bar_1"><tbody><tr>
 <td width="15%" align="left" valign="top" class="nav_bar_1">
-<span class="footer_text_1">17-Dec-2008</span>
+<span class="footer_text_1">14-Jun-2009</span>
 </td>
 <td width="65%" align="center" valign="top" class="nav_bar_1">
 <span class="footer_text_1">
 <a id="ctl02_lnk_about" href="http://www.rentboard.ca/company/index.aspx" target="_top">About RentBoard.ca</a> | 
+<a id="ctl02_lnk_contact" href="http://www.rentboard.ca/company/contact.aspx" target="_top">Contact Us</a> | 
 <a id="ctl02_lnk_privacy" href="http://www.rentboard.ca/company/privacy_policy.aspx" target="_top">Privacy</a> | 
 <a id="ctl02_lnk_terms" href="http://www.rentboard.ca/company/terms_of_use.aspx" target="_top">Terms of Use</a> | 
 <a id="ctl02_lnk_language" href="http://www.rentboard.ca/user/set_culture.aspx" target="_top">Choose Language</a>
 </span>
 </td>
 <td width="20%" align="right" valign="top" class="nav_bar_1">
-<span class="footer_text_1">© 2008 <a id="ctl02_lnk_home" href="http://www.rentboard.ca/index.aspx" target="_top">RentBoard.ca</a></span>
+<span class="footer_text_1">© 2009 <a id="ctl02_lnk_home" href="http://www.rentboard.ca/index.aspx" target="_top">RentBoard.ca</a></span>
 </td>
 </tr></tbody></table>
 <script type="text/javascript">
